# PROI-Equalizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docs.md
.github/workflows/: cmake.yml
src/: util.cpp  util.h
src/PluginEditor/: PluginEditor.cpp  PluginEditor.h
src/PluginProcessor/: PluginProcessor.cpp  PluginProcessor.h
src/SpectrumAnalyser/: SpectrumAnalyser.cpp  SpectrumAnalyser.h
tests/: CMakeLists.txt  PluginEditorTest.cpp  PluginEditorTest.h  PluginProcessorTest.cpp  PluginProcessorTest.h  test_EqualizerEditor.cpp  test_EqualizerProcessor.cpp  test_main.cpp
